--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -1,23 +1,29 @@
 # Main
 set $mod Mod1
 
-# Decoration
-# for_window [class".*"] border pixel 0
 
-gaps inner 10
-gaps outer 5
-font pango:JetBrainsMono Nerd 12
+# █▀▄ █▀▀ █▀▀ █▀█ █▀█ ▄▀█ ▀█▀ █ █▀█ █▄░█
+# █▄▀ ██▄ █▄▄ █▄█ █▀▄ █▀█ ░█░ █ █▄█ █░▀█
+
+gaps inner 6
+gaps outer 3
+font pango:JetBrainsMono Nerd 10
+
+client.focused          #2B2D2D #2B2D2D #A9B665 #A9B665 #A9B665
+client.unfocused        #111314 #111314 #161819 #161819 #161819
+client.focused_inactive #1F2121 #1F2121 #161819 #161819 #161819
+client.urgent           #E78A4E #E78A4E #ffffff #ffffff #ffffff
 
 # Hide Titlebar
 default_border pixel 1
 default_floating_border pixel 1
 
+exec --no-startup-id feh --bg-scale ~/.config/wallpaper/wallpaper.png
+
 # Start Up
 exec --no-startup-id dex --autostart --environment i3
-#exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
-#Polybar
-#exec --no-startup-id "/home/$USER/.config/scripts/polybar/polybar-start.sh"
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -31,22 +37,16 @@ floating_modifier $mod
 
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
-tiling_drag modifier titlebar
+#tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
-# start dmenu (a program launcher) 
+# start Rofi
 bindsym $mod+t exec "rofi -modi drun -show drun"
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
-
 
 # change focus
 bindsym $mod+j focus left
@@ -172,8 +172,21 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
-# i3 Bar
-#bar {
-#       status_command i3status
-#}
 
+# █▄▄ ▄▀█ █▀█
+# █▄█ █▀█ █▀▄
+
+bar {
+        position top
+	status_command i3status
+	colors {
+        background         #111314
+        statusline         #f0e9da
+        separator          #2B2D2D
+
+        focused_workspace  #161819 #A9B665 #f0e9da   # bg border text (main accent)
+        inactive_workspace #111314 #2B2D2D #f7f3ea36
+        urgent_workspace   #111314 #EA6962 #EA6962
+        binding_mode       #111314 #D3869B #f0e9da
+    }
+}
